--- a/app/src/main/res/drawable/ic_waveabaixo.xml
+++ b/app/src/main/res/drawable/ic_waveabaixo.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="320">
   <path
       android:pathData="M0,160L48,144C96,128 192,96 288,112C384,128 480,192 576,181.3C672,171 768,85 864,90.7C960,96 1056,192 1152,202.7C1248,213 1344,139 1392,101.3L1440,64L1440,0L1392,0C1344,0 1248,0 1152,0C1056,0 960,0 864,0C768,0 672,0 576,0C480,0 384,0 288,0C192,0 96,0 48,0L0,0Z"
-      android:fillColor="#a2d9ff"/>
+      android:fillColor="@color/primary.dark"/>
 </vector>
