--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary">#00acc1</color>
+    <color name="primary.dark">#007c91</color>
+    <color name="primary.light">#5ddef4</color>
 </resources>
