--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DashboardActivity"
-    android:padding="32dp"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/degrade"
+        android:paddingBottom="10dp">
 
         <androidx.cardview.widget.CardView
             android:layout_width="100dp"
@@ -32,14 +33,16 @@
             android:text="Mabel Pines"
             android:layout_gravity="center"
             android:textSize="20dp"
-            android:layout_marginTop="25dp"/>
+            android:layout_marginTop="25dp"
+            android:textColor="@color/white"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mabel Pines"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            android:textColor="@color/white"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -54,7 +57,8 @@
                 android:textSize="20sp"
                 android:text="25.5"
                 android:gravity="center"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/white"/>
 
             <TextView
                 android:layout_width="0dp"
@@ -63,7 +67,8 @@
                 android:textSize="20sp"
                 android:gravity="center"
                 android:text="25.5"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/white"/>
 
             <TextView
                 android:layout_width="0dp"
@@ -72,7 +77,8 @@
                 android:textSize="20sp"
                 android:gravity="center"
                 android:text="25.5"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/white"/>
 
             <TextView
                 android:layout_width="0dp"
@@ -81,7 +87,8 @@
                 android:textSize="20sp"
                 android:gravity="center"
                 android:text="25.5"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/white"/>
 
             <TextView
                 android:layout_width="0dp"
@@ -90,7 +97,8 @@
                 android:textSize="20sp"
                 android:gravity="center"
                 android:text="25.5"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/white"/>
         </LinearLayout>
 
         <LinearLayout
@@ -104,48 +112,118 @@
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
-               android:text="IMC"/>
+               android:text="@string/dasboard_imc"
+               android:textColor="@color/white"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_weight="1"
-                android:text="NCD"/>
+                android:text="@string/dashboard_ncd"
+                android:textColor="@color/white"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_weight="1"
-                android:text="Idade"/>
+                android:text="@string/dasboard_idade"
+                android:textColor="@color/white"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_weight="1"
-                android:text="Peso"/>
+                android:text="@string/dashboard_peso"
+                android:textColor="@color/white"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_weight="1"
-                android:text="Altura"/>
+                android:text="@string/dasboard_altura"
+                android:textColor="@color/white"/>
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="20dp">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="100dp">
+            android:layout_height="70dp">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="10dp">
+
+                <ImageView android:id="@+id/iv_peso"
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/peso"
+                    android:layout_marginEnd="20dp"/>
+
+                <TextView android:id="@+id/tx_peso"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dashboard_pesaragora"
+                    android:layout_toEndOf="@+id/iv_peso"
+                    android:textSize="22sp"
+                    android:textStyle="bold"/>
+
+                <TextView android:id="@+id/tx_acompanhePeso"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dashboard_acompanhepeso"
+                    android:layout_toEndOf="@+id/iv_peso"
+                    android:layout_alignParentBottom="true"
+                    android:textSize="14sp"/>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginTop="25dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="10dp">
+
+                <ImageView android:id="@+id/iv_historico"
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/statistics"
+                    android:layout_marginEnd="20dp"/>
+
+                <TextView android:id="@+id/tx_historico"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dashboard_verhistorico"
+                    android:layout_toEndOf="@+id/iv_historico"
+                    android:textSize="22sp"
+                    android:textStyle="bold"/>
+
+                <TextView android:id="@+id/tx_acompanheHistorico"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dashboard_revejahistorico"
+                    android:layout_toEndOf="@+id/iv_historico"
+                    android:layout_alignParentBottom="true"
+                    android:textSize="14sp"/>
+            </RelativeLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+    </LinearLayout>
+
     <!--
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -155,6 +233,7 @@
         app:cardBackgroundColor="@color/primary.light"
         app:cardCornerRadius="10dp">
     </androidx.cardview.widget.CardView>
+
     <androidx.cardview.widget.CardView
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -171,5 +250,4 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"/>
-        -->
-</LinearLayout>
+      -->
