--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
         />
 
     <ScrollView
+        android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/wave_top"
@@ -114,6 +115,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
+                android:id="@+id/btn_entrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/login_activity_entrar"
@@ -149,6 +151,7 @@
                     android:layout_marginEnd="8dp"/>
 
                 <Button
+                    android:id="@+id/btn_criar_conta"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/login_activity_criar_uma_conta_agora"
