--- a/app/src/main/res/drawable/degrade.xml
+++ b/app/src/main/res/drawable/degrade.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="@color/primary.dark" ></gradient>
-    <gradient android:endColor="@color/primary.light"></gradient>
+    <gradient
+        android:startColor="@color/primary.dark"
+        android:endColor="@color/primary.light"
+        android:angle="90"/>
 </shape>
