--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -26,6 +26,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
+            android:id="@+id/dash_nome_usuario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mabel Pines"
@@ -35,6 +36,7 @@
             android:textColor="@color/white"/>
 
         <TextView
+            android:id="@+id/dash_profissao"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mabel Pines"
@@ -89,6 +91,7 @@
                 android:textColor="@color/white"/>
 
             <TextView
+                android:id="@+id/dash_altura"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
